# StageMind

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README-CODEX-SKILLS.md  README.md  StageMind_TZ_final.md
Source/DSP/: CleanUpProcessor.cpp  CleanUpProcessor.h  CorrelationMeter.cpp  CorrelationMeter.h  DepthProcessor.cpp  DepthProcessor.h  DynamicEQ.cpp  DynamicEQ.h  LevelRider.cpp  LevelRider.h  LinkSpectralAnalyzer.cpp  LinkSpectralAnalyzer.h  LowMonoProcessor.cpp  LowMonoProcessor.h  MeterSnapshot.h  MidSideProcessor.cpp  MidSideProcessor.h  MotionProcessor.cpp  MotionProcessor.h  PseudoDoubleProcessor.cpp  PseudoDoubleProcessor.h  ResonanceDetector.cpp  ResonanceDetector.h  ResonanceLearner.cpp  ResonanceLearner.h  ResonanceTypes.h  SideHighPassProcessor.cpp  SideHighPassProcessor.h  SidechainDetector.cpp  SidechainDetector.h  SidechainDynamicEQ.cpp  SidechainDynamicEQ.h  SpatialProcessor.cpp  SpatialProcessor.h  StageGainLoudnessMeter.cpp  StageGainLoudnessMeter.h
Source/Link/: BalanceTimelineMemory.h  LinkActivityEnvelope.cpp  LinkActivityEnvelope.h  LinkSpectralBands.h  LinkSuggestionEngine.cpp  LinkSuggestionEngine.h  RideMemory.h  RideTimelineMemory.h  StageMindLinkRegistry.cpp  StageMindLinkRegistry.h
Source/Model/: AutoAssistMode.h  MotionPreset.h  Parameters.cpp  Parameters.h  PluginMode.h  PluginState.cpp  PluginState.h  QualityMode.h  RoleBalanceModel.h  RolePresetEngine.cpp  RolePresetEngine.h  RoleProfile.h  SafetyMode.h  SidechainConflictMode.h  SidechainListenMode.h  StageGainMeterMode.h  StageGainMode.h  TrackRole.h  TriggerMode.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: DirectorSceneView.cpp  DirectorSceneView.h  HardwareLookAndFeel.cpp  HardwareLookAndFeel.h  MeterView.cpp  MeterView.h  ResonanceListView.cpp  ResonanceListView.h  StageView.cpp  StageView.h  Theme.h
Tests/: BalanceTimelineMemoryTests.cpp  LinkActivityEnvelopeTests.cpp  LinkSpectralAnalyzerTests.cpp  LinkSuggestionEngineTests.cpp  ResonanceDetectorTests.cpp  RideMemoryTests.cpp  RideTimelineMemoryTests.cpp  RoleBalanceModelTests.cpp  SpatialEnhancementTests.cpp  StageMindLinkRegistryTests.cpp
docs/: CODEX_WORKFLOW.md  DESIGN_DIRECTION.md  MVP4_MVP5_FINALIZATION.md  MVP5_FL_QA_CHECKLIST.md  PLUGIN_SPEC.md  PRODUCT_SPEC.md  PROJECT_CONTEXT.md  RELEASE_QA_CHECKLIST.md  SESSION_CHECKPOINT_2026-06-09.md  SESSION_PLAN_0_9_0.md  STAGEMIND_NODE_0_10_0_RC.md  STAGEMIND_NODE_0_11_0_RC.md  STAGEMIND_NODE_0_11_1_RC.md  STAGEMIND_NODE_0_11_2_RC.md  STAGEMIND_NODE_0_11_3_RC.md  STAGEMIND_NODE_0_5_5_RC.md  STAGEMIND_NODE_0_5_6_RC.md  STAGEMIND_NODE_0_5_7_RC.md  STAGEMIND_NODE_0_5_8_RC.md  STAGEMIND_NODE_0_5_9_RC.md  STAGEMIND_NODE_0_6_0_RC.md  STAGEMIND_NODE_0_6_1_RC.md  STAGEMIND_NODE_0_6_2_RC.md  STAGEMIND_NODE_0_7_0_RC.md  STAGEMIND_NODE_0_7_1_RC.md  STAGEMIND_NODE_0_7_2_RC.md  STAGEMIND_NODE_0_7_3_RC.md  STAGEMIND_NODE_0_8_0_RC.md  STAGEMIND_NODE_0_8_1_RC.md  STAGEMIND_NODE_0_8_2_RC.md  STAGEMIND_NODE_0_8_3_RC.md  STAGEMIND_NODE_0_8_4_RC.md  STAGEMIND_NODE_0_8_5_RC.md  STAGEMIND_NODE_0_8_6_RC.md  STAGEMIND_NODE_0_8_7_RC.md  STAGEMIND_NODE_0_8_8_RC.md  STAGEMIND_NODE_0_8_9_RC.md  STAGEMIND_NODE_0_9_0_RC.md  STAGEMIND_NODE_0_9_1_RC.md  STAGEMIND_NODE_0_9_2_RC.md  (+8 more)
docs/adr/: 0001-architecture-decisions-placeholder.md  0002-juce-dependency-source.md  0003-local-resonance-detector.md  0004-zero-latency-spatial-enhancers.md  0005-stage-mind-link-registry.md  0010-integrated-director-mode.md  (+15 more)
scripts/: build-and-package-vst3.cmd  dev-cmd.cmd  package-vst3.cmd  verify-toolchain.cmd
(+7 files in other folders)
